--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noise Island</title>
+    <title>WFC Terrain</title>
     <script src="./lib/phaser.js"></script>
     <script src="src/Scenes/ArrayMap.js"></script>
-    <script src="./lib/perlin.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
