Edit UI and README

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <div id="phaser-game"></div>
     <div id="seed-value"></div>
-    <span id="description"></span>
+    <span id="description">Press R to re-generate.</span>
 </body>
 </html>
